syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";


package protobuf;

service Group {

  // 加入组
  rpc Join (GroupFdReq) returns (GroupRsp) {
  }

  // 退出组
  rpc Quit (GroupFdReq) returns (GroupRsp) {
  }

  // 删除一个组
  rpc Del (GroupReq) returns (GroupRsp) {
  }
}

message GroupReq {
  string aid = 1; // 应用ID
  string gid = 2; // 用户ID
}

message GroupFdReq {
  string aid = 1; // 应用ID
  string gid = 2;
  string fd = 3;

}

message GroupRsp {
  uint32 code = 1;
  string message = 2;
}
